--- a/lab3/index.html
+++ b/lab3/index.html
@@ -16,20 +16,18 @@
             <nav class="main-menu">
                 <ul>
                     <li><a href="index.html">Main menu</a></li>
-                    <li><a href="/lab1/index.html">Lab 1</a></li>
-                    <li><a href="/lab2/index.html">Lab 2</a></li>
-                    <li><a href="/lab3/index.html">Lab 3</a></li>
+                    <li><a href="auth.html">Authorization</a></li>
                 </ul>
             </nav>
-            <!--<div class="profile">
-                <a href="auth.html">Login</a>
-            </div>-->
+            <div class="profile">
+                <a href="">Login</a>
+            </div>
         </div>
 
 
     </header>
     <main class="container d-flex direction-column">
-        <!--<aside class="sidebar">
+        <aside class="sidebar">
             <form>
                 <fieldset class="sidebar-section">
                     <legend>Safety class</legend>
@@ -148,7 +146,7 @@
                     </div>
                 </div> 
             </div>
-        </div>-->
+        </div>
     </main>
     <footer class="footer">
         <div class="container-centered">
