--- a/lab2/auth.html
+++ b/lab2/auth.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <header class="header">
+    <header class="header-main">
         <div class="container d-flex direction-column">
             <nav class="main-menu">
                 <ul>
