--- a/lab2/index.html
+++ b/lab2/index.html
@@ -8,7 +8,7 @@
         <title>Форма обратной связи</title>
     </head>
     <body>
-        <header class="header">
+        <header class="header-main">
             <div class="container d-flex direction-column">
                 <nav class="main-menu">
                     <ul>
