--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                     <li><a href="/lab1/index.html">Lab 1</a></li>
                     <li><a href="/lab2/index.html">Lab 2</a></li>
                     <li><a href="/lab3/index.html">Lab 3</a></li>
+                    <li><a href="/lab4/index.html">Lab 4</a></li>
+                    <li><a href="/lab4.1/index.html">Lab 4.1</a></li>
                 </ul>
             </nav>
             <!--<div class="profile">
